2003-12-17  Szabolcs Ban <shooby@gnome.hu>

	* descs/TH_Thai.keyprop.in: correcting Thai keymap with hotfix of
          Paisa Seeluangsawat <paisa@unt.edu> (adding en_US as second group)

2003-10-18  Szabolcs Ban <shooby@gnome.hu>

	* xmodmap/xmodmap.us_intl: new file from Roberto Jimeno
          <jimeno@sevidor.unam.mx>, cedilla fix for Mexican layouts.

Tue Sep 16 16:38:04 2003  George Lebl <jirka@5z.com>

	* prop-map.c: the command entry in the edit map dialog needs to
	  be disabled if the command line is being inhibited.

Mon Sep 15 15:18:03 2003  George Lebl <jirka@5z.com>

	* gkb-applet.c: when started in lockdown mode, hide the preferences
	  item

2003-08-24  Irene Ryan <irene.ryan@sun.com>

	* help/C/gkb.xml, gkb-C.omf: updates to the Help for the GNOME 2.4 release
	* help/C/gkb_applet.png: new screenshot

2003-07-26  Kevin Vandersloot

	* descs/German.keyprop.in: The keymap shoudld be de not sg. Patch
	from flight debian org. Fixes bug #117666

2003-07-23  Kevin Vandersloot

	* schemas.in: clean up strings

2003-07-21  Dennis Cranston <dennis_cranston at yahoo com>

	* prop.c, prop-add.c, prop-map.c:  HIGify widget padding between 
	the vbox and action area of the dialog.  Thanks to <chris@gnome-de.org>
	Christian - Manny Calavera - Neumair.

Thu Jul 10 11:54:12 2003  George Lebl <jirka@5z.com>

	* gconf.c, gkb.[ch], prop.c: Respect key writability, even though
	  it's a bit of an overkill in the way it works.  Basically for the
	  list of keyboards, if any key is not writable, you can't change
	  anything.  This is really because of the way it works, it should
	  work more like the panel.  But oh well.

	* prop-add.c: Fix memory leak, fix crash on window display, correctly
	  sensitize the add button.

2003-06-29  Kevin Vandersloot

	* prop-add.c: Fix adding keymaps to the tree.

2003-06-18  Kaushal Kumar <kaushal.kumar@wipro.com>

	* prop-map.c (gkb_prop_map_close_clicked) : Have default values 
	for Name and Label when left empty. Fixes bug #115269.