@@ -19,12 +19,12 @@
         </country>
     </keymap>
     <keymap>
-        <_name>Azerbaidjani Turkic Sun keymap</_name>
+        <_name>Azerbaijani Turkish Sun keymap</_name>
         <Command>gkb_xmmap az</Command>
-        <_Language>Azerbaidjani Turkic</_Language>
+        <_Language>Azerbaijani Turkish</_Language>
         <country>
             <flag>az.png</flag>
-            <_name>Azerbaidjan</_name>
+            <_name>Azerbaijan</_name>
         </country>
     </keymap>
     <keymap>
