@@ -54,7 +54,7 @@
         </country>
         <country>
             <flag>ma.png</flag>
-            <_name>Marocco</_name>
+            <_name>Morocco</_name>
         </country>
         <country>
             <flag>om.png</flag>
@@ -196,12 +196,12 @@
         </country>
     </keymap>
     <keymap>
-        <_name>Azerbaidjani Turkic xkb keymap</_name>
+        <_name>Azerbaijani Turkish xkb keymap</_name>
         <command>setxkbmap az</command>
-        <_language>Azerbaidjani Turkic</_language>
+        <_language>Azerbaijani Turkish</_language>
         <country>
             <flag>az.png</flag>
-            <_name>Azerbaidjan</_name>
+            <_name>Azerbaijan</_name>
         </country>
     </keymap>
     <keymap>
@@ -893,7 +893,7 @@
     <keymap>
         <_name>Portugal Deadkeys</_name>
         <command>gkb_xmmap pt-dead</command>
-        <_language>Portuglese</_language>
+        <_language>Portuguese</_language>
         <country>
             <flag>pt.png</flag>
             <_name>Portugal</_name>
@@ -1286,18 +1286,18 @@
         </country>
     </keymap>
     <keymap>
-        <_name>Serb keymap</_name>
+        <_name>Serbian keymap</_name>
         <command>gkb_xmmap yu</command>
-        <_language>Serb</_language>
+        <_language>Serbian</_language>
         <country>
             <flag>yu.png</flag>
             <_name>Serbia and Montenegro</_name>
         </country>
     </keymap>
     <keymap>
-        <_name>Serb keymap</_name>
+        <_name>Serbian keymap</_name>
         <command>gkb_xmmap yu</command>
-        <_language>Serb</_language>
+        <_language>Serbian</_language>
         <country>
             <flag>yu.png</flag>
             <_name>Serbia and Montenegro</_name>
