@@ -1,3 +1,9 @@
+2004-01-06  Danilo Šegan  <dsegan@gmx.net>
+
+	* descs/presets.xml.in: Fix typos (bug #119644).
+
+	* descs.sun/presets.xml.in: Fix typos (bug #119644).
+
 2003-12-17  Szabolcs Ban <shooby@gnome.hu>
 
 	* descs/TH_Thai.keyprop.in: correcting Thai keymap with hotfix of
